gcc/testsuite/gm2/iso/fail/badset4.mod
MODULE badset4 ;

TYPE
   foo = SET OF CHAR ;
VAR
   s: Foo ;
BEGIN
END badset4.
